# cabal-hoogle

./: .gitignore  .gitpod.Dockerfile  .gitpod.cabal_config  .gitpod.yml  CHANGELOG.md  README.md  cabal-hoogle.cabal  cabal.project  flake.nix  stack.yaml
.github/workflows/: haskell-ci.yml  test.yml
app/: Main.hs
nix/: hix.nix
src/Hoogle/: Cabal.hs
src/Hoogle/Cabal/: CmdOptions.hs  Command.hs  Logger.hs
src/Hoogle/Cabal/Command/: ActAsSetup.hs  Common.hs  Generate.hs  Run.hs  Version.hs
test/: IntegrationTest.hs  Main.hs
