cabal-version:      2.4
name:               cabal-hoogle
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             kokobd
maintainer:         contact@zelinf.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    build-depends:
        base ^>= 4.16
      , Cabal ^>= 3.6.2.0
      , directory ^>= 1.3.6
      , optparse-applicative ^>= 0.17.0
      , text ^>= 1.2.5
      , transformers ^>= 0.5.6
      , filepath
      , string-interpolate
    default-language: Haskell2010
    hs-source-dirs: src
    default-extensions:
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings
        QuasiQuotes
    exposed-modules:
        Hoogle.Cabal
        Hoogle.Cabal.CmdOptions

executable cabal-hoogle
    main-is: Main.hs
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts
    build-depends:
        base
      , cabal-hoogle
