cabal-version:      3.0
name:               cabal-hoogle
version:            0.1.0.0
synopsis:           Just like "stack hoogle", but for cabal projects
description:        This tool
bug-reports:        https://github.com/kokobd/cabal-hoogle/issues
license:            BSD-3-Clause
author:             kokobd <contact@zelinf.net>
maintainer:         kokobd <contact@zelinf.net>
stability:          experimental
copyright:          (c) 2022 kokobd
category:           Development
build-type:         Simple
extra-source-files:
    CHANGELOG.md
    README.md

library
    build-depends:
        base >= 4.14 && < 5
      , Cabal >= 3.2.0.0 && < 4
      , containers ^>= 0.6.2.1
      , directory ^>= 1.3.6
      , filepath ^>= 1.4.2
      , optparse-applicative ^>= 0.17.0
      , regex-tdfa ^>= 1.3.1
      , string-interpolate ^>= 0.3.1.2
      , text ^>= 1.2.4
      , transformers ^>= 0.5.6
      , typed-process ^>= 0.2.10
      , extra ^>= 1.7.10
    default-language: Haskell2010
    ghc-options: -Wall
    hs-source-dirs: src
    default-extensions:
        OverloadedStrings
        QuasiQuotes
    exposed-modules:
        Hoogle.Cabal
        Hoogle.Cabal.CmdOptions

executable cabal-hoogle
    main-is: Main.hs
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts
    build-depends:
        base
      , cabal-hoogle

test-suite tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:
    IntegrationTest
  build-depends:
      base
    , cabal-hoogle
    , tasty ^>= 1.4.2.3
    , tasty-hunit ^>= 0.10.0.3
    , silently ^>= 1.2.5.2
  build-tool-depends:
    , tasty-discover:tasty-discover
    , hoogle:hoogle
