cabal-version:      3.0
name:               cabal-hoogle
version:            3.10.0.0
synopsis:           generate hoogle database for cabal project and dependencies
description:
  Please see the README on GitHub at <https://github.com/kokobd/cabal-hoogle>

bug-reports:        https://github.com/kokobd/cabal-hoogle/issues
license:            BSD-3-Clause
author:             kokobd <contact@zelinf.net>
maintainer:         kokobd <contact@zelinf.net>
stability:          experimental
copyright:          (c) 2022 kokobd
category:           Development
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/kokobd/cabal-hoogle

library
  build-depends:
    , base                  >=4.14     && <5
    , Cabal                 ^>=3.10
    , cabal-install         ^>=3.10
    , Cabal-syntax          ^>=3.10
    , co-log-core           >=0.2      && <0.4
    , containers            ^>=0.6.2.1
    , directory             ^>=1.3.6
    , extra                 ^>=1.7.10
    , filepath              ^>=1.4.2
    , hoogle                ^>=5.0.18
    , lens                  >=5        && <6
    , optparse-applicative  >=0.16     && <1
    , regex-tdfa            ^>=1.3.1
    , string-interpolate    ^>=0.3.1.2
    , text                  ^>=1.2.4
    , time                  >=1.10     && <2
    , transformers          ^>=0.5.6
    , typed-process         ^>=0.2.10

  default-language:   Haskell2010
  ghc-options:        -Wall
  hs-source-dirs:     src
  default-extensions:
    OverloadedStrings
    QuasiQuotes

  exposed-modules:    Hoogle.Cabal
  other-modules:
    Hoogle.Cabal.Command
    Hoogle.Cabal.Command.ActAsSetup
    Hoogle.Cabal.Command.Common
    Hoogle.Cabal.Command.Generate
    Hoogle.Cabal.Command.Run
    Hoogle.Cabal.Command.Version
    Hoogle.Cabal.Logger

executable cabal-hoogle
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts
  build-depends:
    , base
    , cabal-hoogle

test-suite tests
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:      IntegrationTest
  build-depends:
    , base
    , cabal-hoogle
    , silently      ^>=1.2.5.2
    , tasty         ^>=1.4.2.3
    , tasty-hunit   ^>=0.10.0.3

  build-tool-depends: tasty-discover:tasty-discover
